[package]
name = "postgres-service"
version = "0.17.0"
authors = ["Charles Samuels <charles@derkarl.org>"]
description = "Parse Postgres service configuration files"
documentation = "https://github.com/njaard/postgres-service/blob/master/Readme.md"
repository = "https://github.com/njaard/postgres-service"
readme = "Readme.md"
keywords = [ "database", "sql", "postgres", "postgresql" ]
license = "BSD-2-Clause"
edition="2018"

[dependencies]
rust-ini = "^0.14"
postgres = "^0.17"
